# Timetable.icu

./: .env.example  .prettierignore  .prettierrc.yaml  CREDITS  README.md  astro.config.mjs  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
.github/: FUNDING.yml
migrations/: 0018_lethal_galactus.sql  0022_clear_user_name_image.sql
migrations/meta/: 0021_snapshot.json  0022_snapshot.json  _journal.json
scripts/: compare_json.py  parse_ehandbook.py  parse_icumap.py  utils.py
src/: env.d.ts  middleware.ts
src/components/common/: CourseHeader.tsx  LoginButton.tsx  Modal.tsx  PasskeyButton.tsx  Toast.tsx
src/components/explore/: ExploreInterface.tsx
src/components/layout/: Footer.astro  Header.astro  Layout.astro  LayoutMD.astro
src/components/pages/: EditCoursePage.astro  ExplorePage.astro  LandingPage.astro  NewCoursePage.astro  TimetablePage.astro
src/components/timetable/: CourseDetailContent.tsx  CourseEditor.tsx  CourseList.tsx  TimetableGrid.tsx  TimetableInterface.tsx
src/constants/: time.ts
src/db/data/: course-last-update.json
src/db/schema/: index.ts
src/lib/auth/: cli.ts  client.ts  server.ts
src/lib/course/: hooks.ts  query.ts
src/lib/timetable/: hooks.ts  utils.ts
src/lib/translation/: context.tsx  ui.ts  utils.ts
src/pages/: 404.astro  explore.astro  index.astro  new.astro  privacy.md  terms.md  timetable.astro
src/pages/api/: custom-courses.ts  sync.ts  (+1 more)
src/styles/: global.css
tests/: explore.spec.ts  index.spec.tsx
(+7 files in other folders)
